lorem elave etdik

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <div>Salam</div>
+    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis accusantium non repellat eum excepturi fugiat, iusto tenetur odio debitis velit totam porro eaque neque, hic beatae, vero nostrum. Similique, ratione?</span>
 </body>
 </html>
