--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
           </div>
           <div class="mb-3">
+            <label for="disabledTextInput" class="form-label">Disabled input</label>
+            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+          </div>
+          <div class="mb-3">
+            <label for="disabledTextInput" class="form-label">Disabled input</label>
+            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+          </div>
+          <div class="mb-3">
+            <label for="disabledTextInput" class="form-label">Disabled input</label>
+            <input type="text" id="disabledTextInput" class="form-control" placeholder="Disabled input">
+          </div>
+          <div class="mb-3">
             <label for="disabledSelect" class="form-label">Disabled select menu</label>
             <select id="disabledSelect" class="form-select">
               <option>Disabled select</option>
